--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  
 }
 
 .logo {
@@ -9,12 +13,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  flex-direction: row;
+  display: flex;
+  gap: 20px;
+  margin:20px;
+  padding: 20px;
+  
 }
+
+
 
 a {
   font-size: 22px;
