--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -24,3 +27,56 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+.left-links {
+display: flex;
+justify-content: flex-start;
+align-items: flex-start;
+gap: 20px;
+margin-left: -20px;
+}
+
+.right-links {
+  display: flex;
+  justify-content: flex-end;
+  align-content: flex-end;
+  gap: 20px;
+  margin-right: 20px;
+  }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+.footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #eeeeee;
+  padding: 5px;
+}
+
+.content {
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
+}
+
+.input {
+  margin: 20px;
+}
+
